--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,50 +2,46 @@ pipeline {
     agent any
 
     environment {
-        AWS_ACCESS_KEY_ID     = credentials('aws-access-key-id')
-        AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')
-    }
-
-    parameters {
-        choice(name: 'ACTION', choices: ['apply', 'destroy'], description: 'Terraform action to perform')
+        AWS_ACCESS_KEY_ID     = credentials('	AWS_ACCESS_KEY_ID')      // Jenkins credentials ID
+        AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
     }
 
     stages {
-        stage('Checkout') {
+        stage('Checkout Code') {
             steps {
-                git branch: 'main', url: 'https://github.com/magesh-vvs/preparation.git'
+                git branch: 'main', url: 'https://github.com/yourusername/terraform-ec2.git'
             }
         }
 
         stage('Terraform Init') {
             steps {
-                bat 'terraform init'
+                sh 'terraform init'
             }
         }
 
         stage('Terraform Plan') {
             steps {
-                bat 'terraform plan -out=tfplan'
+                sh 'terraform plan -var="aws_access_key=$AWS_ACCESS_KEY_ID" -var="aws_secret_key=$AWS_SECRET_ACCESS_KEY" -out=tfplan'
             }
         }
 
-        stage('Apply / Destroy') {
-    steps {
-        script {
-            if (params.action == 'apply') {
-                if (!params.autoApprove) {
-                    def plan = readFile 'tfplan.txt'
-                    input message: "Do you want to apply the plan?",
-                    parameters: [text(name: 'Plan', description: 'Please review the plan', defaultValue: plan)]
-                }
-                // Use double quotes so ${action} expands correctly
-                bat "terraform ${params.action} -input=false tfplan"
-            } else if (params.action == 'destroy') {
-                bat "terraform ${params.action} --auto-approve"
-            } else {
-                error "Invalid action selected. Please choose either 'apply' or 'destroy'."
+        stage('Terraform Apply') {
+            steps {
+                input message: 'Approve Terraform Apply?', ok: 'Apply Now'
+                sh 'terraform apply -auto-approve tfplan'
             }
         }
     }
+
+    post {
+        success {
+            echo '✅ Terraform apply completed successfully!'
+        }
+        failure {
+            echo '❌ Terraform failed.'
+        }
+    }
 }
+
+
 
