--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,47 +1,51 @@
 pipeline {
     agent any
 
-    environment {
-        AWS_ACCESS_KEY_ID     = credentials('	AWS_ACCESS_KEY_ID')      // Jenkins credentials ID
-        AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
-    }
-
     stages {
+
         stage('Checkout Code') {
             steps {
-                git branch: 'main', url: 'https://github.com/yourusername/terraform-ec2.git'
+                git branch: 'main', url: 'https://github.com/magesh-vvs/preparation.git'
             }
         }
 
         stage('Terraform Init') {
             steps {
-                sh 'terraform init'
+                withCredentials([string(credentialsId: 'aws-access-key', variable: 'AWS_ACCESS_KEY_ID'),
+                                 string(credentialsId: 'aws-secret-key', variable: 'AWS_SECRET_ACCESS_KEY')]) {
+                    bat 'terraform init'
+                }
             }
         }
 
         stage('Terraform Plan') {
             steps {
-                sh 'terraform plan -var="aws_access_key=$AWS_ACCESS_KEY_ID" -var="aws_secret_key=$AWS_SECRET_ACCESS_KEY" -out=tfplan'
+                withCredentials([string(credentialsId: 'aws-access-key', variable: 'AWS_ACCESS_KEY_ID'),
+                                 string(credentialsId: 'aws-secret-key', variable: 'AWS_SECRET_ACCESS_KEY')]) {
+                    bat 'terraform plan'
+                }
             }
         }
 
         stage('Terraform Apply') {
             steps {
-                input message: 'Approve Terraform Apply?', ok: 'Apply Now'
-                sh 'terraform apply -auto-approve tfplan'
+                input message: 'Approve to apply Terraform changes?'
+                withCredentials([string(credentialsId: 'aws-access-key', variable: 'AWS_ACCESS_KEY_ID'),
+                                 string(credentialsId: 'aws-secret-key', variable: 'AWS_SECRET_ACCESS_KEY')]) {
+                    bat 'terraform apply -auto-approve'
+                }
             }
         }
     }
 
     post {
         success {
-            echo '✅ Terraform apply completed successfully!'
+            echo "✅ EC2 instance launched successfully"
         }
         failure {
-            echo '❌ Terraform failed.'
+            echo "❌ Terraform apply failed"
         }
     }
 }
-
 
 
